# fusion-polkit

./: CMakeLists.txt  README.md  install.sh
assets/: fusion-polkitagent-dbus.in  fusion-polkitagent-service.in
qml/: main.qml  main1.qml
src/: QMLIntegration.cpp  QMLIntegration.hpp  main.cpp
src/core/: Agent.cpp  Agent.hpp  PolkitListener.cpp  PolkitListener.hpp  SecureString.hpp
